# project-t

./: CMakeCache.txt  CMakeLists.txt
include/: CollisionSystem.hpp  Updater.hpp  platformbody.hpp  playerbody.hpp  trapbody.hpp
src/: CollisionSystem.cpp  a.out  main  main.cpp
